<resources>
    <string name="why_get_pro" translatable="false">Warum sollten Sie die Pro-Version verwenden?</string>
    <string name="pro_promote" translatable="false">"● Die Werbung wird entfernt.</string>
    <string name="app_name">APK Editor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading">Loading &#8230;</string>
    <string name="string">String</string>
    <string name="resource">Resource</string>
    <string name="manifest">Manifest</string>
    <string name="save">Save</string>
    <string name="cannot_parse_apk">Cannot parse the apk file</string>
    <string name="resolution">Resolution</string>
    <string name="pro_mode">PRO</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="delete_this_line">Delete this Line</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="succeed">Succeed</string>
    <string name="key">Key</string>
    <string name="value">Value</string>
    <string name="install">Install</string>
    <string name="close">Close</string>
    <string name="extract">Extract</string>
    <string name="select_apk_file">Select an Apk File</string>
    <string name="select_apk_from_app">Select Apk from App</string>
    <string name="line_data">LINE DATA:</string>
    <string name="description">DESCRIPTION:</string>
    <string name="in_progress">Working &#8230;</string>
    <string name="select_file_replace">Select a file to replace it</string>
    <string name="pls_input_keyword">Input Keyword to Search</string>
    <string name="manifest_edit_not_support">Editing is not supported in free version!</string>
    <string name="promote_msg">Editing is only supported in pro version.&#x0a;Click \'View Pro Version\' to get the pro version?</string>
    <string name="not_available">Not Available</string>
    <string name="view_pro_version">View Pro Version</string>
    <string name="add_key_value">Add a key/value:</string>
    <string name="open_in_new_window">Open in a new window</string>
    <string name="edit_string_value">Edit the Value</string>
    <string name="add_a_language">Add a Language</string>
    <string name="language">Language:</string>
    <string name="code">Code:</string>
    <string name="replace">Replace</string>
    <string name="resource_replaced">Resource replaced.</string>
    <string name="show_ad">Show AD</string>
    <string name="sure_to_exit_editing">Are you sure to exit the editing?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="dummy"></string>
    <string name="rename">Rename</string>
    <string name="pls_input_filename">Please Input the File Name:</string>
    <string name="file_already_exist">\'%s\' already exists!</string>
    <string name="failed">Failed</string>
    <string name="app_display">App Display</string>
    <string name="app_list_order">App List Ordered By</string>
    <string name="appearance">Appearance</string>
    <string name="launcher_icon">Launcher Icon</string>
    <string name="full_screen">Full Screen</string>
    <string name="full_screen_desc">Select to enable full screen</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_desc">Enable dark theme for APK editing</string>
    <string name="save_succeed_1">Succeed: saved to %s</string>
    <string name="failed_1">Failed: %s</string>
    <string name="user_apps">User Apps</string>
    <string name="system_apps">System Apps</string>
    <string name="icon_changed_tip">Icon changed, but it may not take effect until you reboot your device.</string>
    <string name="empty_key_tip">Key can not be empty!</string>
    <string name="show_ad_tip">Succeed! Sorry to show an ad for you.</string>
    <string name="apk_savedas_1">APK saved as %s</string>
    <string name="invalid_lang_code">Invalid language code!</string>
    <string name="wait_for_decoding">Please wait for a moment until the decoding is finished.</string>
    <string name="lang_exist">The language already exists!</string>
    <string name="section_undeletable">This section can not be deleted!</string>
    <string name="remove">Remove</string>
    <string name="remove_tip">The app is already installed, you may need to remove it before installing the modified apk.</string>
    <string name="full_edit">Full Edit (RESOURCE RE-BUILD)</string>
    <string name="simple_edit">Simple Edit (FILE REPLACEMENT)</string>
    <string name="files_capital">FILES</string>
    <string name="images_capital">IMAGES</string>
    <string name="audios_captical">AUDIOS</string>
    <string name="size">Size</string>
    <string name="saved">saved.</string>
    <string name="image_summary">%d images</string>
    <string name="audio_summary">%d audios</string>
    <string name="compose">Compose</string>
    <string name="sign">Sign</string>
    <string name="compose_error">Compose Error: </string>
    <string name="sign_error">Sign Error: </string>
    <string name="must_allow_non_market_app">Installation of non-Market apps must be allowed!</string>
    <string name="apk_building">APK Building</string>
    <string name="compression_level">Compression Level</string>
    <string name="compression_level_summary">Lower level has better speed, but with bad compression ratio, thus make the APK bigger.</string>
    <string name="str_app_name">App Name</string>
    <string name="common_edit">Common Edit</string>
    <string name="package_name">Package Name</string>
    <string name="install_location">Install Location</string>
    <string name="version_code">Version Code</string>
    <string name="version_name">Version Name</string>
    <string name="location_0">Default (Not Specified)</string>
    <string name="location_1">Auto (OS Make Decision)</string>
    <string name="location_2">Internal Only</string>
    <string name="location_3">Prefer External</string>
    <string name="invalid_ver_code">Invalid Version Code.</string>
    <string name="no_change_detected">No Change Detected.</string>
    <string name="step">Step</string>
    <string name="merge">Merge</string>
    <string name="merge_error">Merge Error: %s</string>
    <string name="cleanup">Clean up</string>
    <string name="notfound_in_manifest">Cannot find the target string in AndroidManifest.xml</string>
    <string name="empty_input_tip">Input cannot be empty.</string>
    <string name="mf_search_ret">%d Lines Found</string>
    <string name="add_a_file">Add a File</string>
    <string name="file_added">File added: %s</string>
    <string name="edit_data_root">Edit Data [ROOT]</string>
    <string name="others">Others</string>
    <string name="clean_garbage">Clean Garbage</string>
    <string name="clean_garbage_summary">Click here to clean the temporary files.</string>
    <string name="temp_file_cleaned">Temporary file cleaned.</string>
    <string name="auto_translation">Auto Translation</string>
    <string name="select_target_lang">"Select a language to translate to"</string>
    <string name="stop">Stop</string>
    <string name="hide">Hide</string>
    <string name="retranslate"><u>New Translate</u></string>
    <string name="translating">Translating &#8230;</string>
    <string name="translated">Translated</string>
    <string name="translated_format">%d strings translated</string>
    <string name="failed_format">%d strings failed</string>
    <string name="untranslated_format">%d strings untranslated</string>
    <string name="error_no_string_totranslate">No string needs to be translated.</string>
    <string name="error_no_string_tosave">No translated string to save.</string>
    <string name="general_error">Error: %s</string>
    <string name="save_succeed_tip">%d strings saved.</string>
    <string name="save_translation_title">Save the translation?</string>
    <string name="save_translation_msg">The translation is not saved yet. Save it before further operation?</string>
    <string name="string_notsaved_msg">%d strings are discarded.</string>
    <string name="apk_saved_tip">Succeed! APK saved to SD card: %s</string>
    <string name="warning_keyword_empty">Input cannot be empty.</string>
    <string name="error_file_too_big">File is too big to open.</string>
    <string name="settings">Settings</string>
    <string name="find_replace">Find/Replace</string>
    <string name="regexp">Regular Expression</string>
    <string name="not_found">Not Found</string>
    <string name="file_saved">File Saved.</string>
    <string name="font_size">Font Size</string>
    <string name="font_size_summary">Current font size: %d</string>
    <string name="line_wrap">Line Wrap</string>
    <string name="line_wrap_enabled">Line wrapping is enabled. Needs restarting if changed.</string>
    <string name="rename_in_resources">Rename the package name in resources.arsc</string>
    <string name="sign_apk_with">Sign APK with</string>
    <string name="sign_apk_with_summary">Specify which key is to used to sign the APK.</string>
    <string name="smali_editing">Smali Editing</string>
    <string name="smali_edit_summary">Enabled. Will show DEX to smali image in Full Edit.</string>
    <string name="pkg_rename_notice">Please Note: Package rename is more likely not to work, depending on how the app is written (or even protected).</string>
    <string name="package_rename_method">Package Rename Method</string>
    <string name="name">Name</string>
    <string name="path">Path</string>
    <string name="entry_in_apk">Entry in APK</string>
    <string name="rebuild_confirmation">Rebuild Confirmation</string>
    <string name="rebuild_confirm_d_summary">Disabled. Will directly rebuild and sign the APK when save button is clicked.</string>
    <string name="rebuild_dex_file">Rebuild DEX file</string>
    <string name="rebuild_res_file">Rebuild resource file</string>
    <string name="sign_the_apk">Sign the APK</string>
    <string name="select_theme_desc">Please select your preferred theme.</string>
    <string name="app_theme">App Theme</string>
    <string name="output_apk_name">Output APK Name</string>
    <string name="output_apk_name_summary">Specify how to name the generated APK file.</string>
    <string name="preferred_language">Preferred Language</string>
    <string name="select_language_desc">Please select your preferred language.</string>
    <string name="min_sdk_version">Minimum SDK Version</string>
    <string name="target_sdk_version">Target SDK Version</string>
    <string name="max_sdk_version">Maximum SDK Version</string>
    <string name="show_line_numbers">Show Line Numbers</string>
    <string name="apk_decoding">APK Decoding</string>
    <string name="decode_dir">Decoding Directory</string>
    <string name="decode_dir_summary_may_change">Not Set. Will use the default internal storage.</string>
    <string name="file_rename">File Rename</string>
    <string name="file_extract_rename_summary">Choose the way how the resource files will be renamed when necessary. (for file extraction)</string>
    <string name="rename_in_dex">Rename package name in DEX file(s) [Beta version yet. To improve the success rate, please keep the length unchanged, and do as minor change as possible, like change com.android to com.androie]</string>
    <string name="when_use_bfe">When Use Big File Editor</string>
    <string name="use_bfe_message">Big file editor is designed to load big files much faster. However, it can only support editing line by line.\nHere you can define the threshold value to use the big file editor (in Kbytes unit):</string>
    <string name="symbol_input">Symbol Input</string>
    <string name="symbol_input_summary">Enable symbol input or not.</string>
    <string name="decode_mode">Decoding Mode</string>
</resources>