<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dip"
        android:text="@string/line_data"
        android:textColor="#222222"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dip"
        android:paddingLeft="24dip"
        android:textColor="#222222"
        android:textSize="14sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dip"
        android:text="@string/description"
        android:textColor="#222222"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dip"
        android:paddingLeft="24dip"
        android:textColor="#222222"
        android:textSize="14sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#555555" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/textview_bg"
        android:gravity="center_vertical"
        android:paddingLeft="8dip"
        android:text="@string/delete_this_line"
        android:textColor="@color/textview_color"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#555555" />

    <TextView
        android:id="@+id/extract"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/textview_bg"
        android:gravity="center_vertical"
        android:paddingLeft="8dip"
        android:singleLine="true"
        android:text="@string/extract"
        android:textColor="@color/textview_color"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#555555" />

    <TextView
        android:id="@+id/replace"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/textview_bg"
        android:gravity="center_vertical"
        android:paddingLeft="8dip"
        android:singleLine="true"
        android:text="@string/replace"
        android:textColor="@color/textview_color"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#555555" />

    <TextView
        android:id="@+id/open_in_new_window"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/textview_bg"
        android:gravity="center_vertical"
        android:paddingLeft="8dip"
        android:singleLine="true"
        android:text="@string/open_in_new_window"
        android:textColor="@color/textview_color"
        android:textSize="20sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="#555555" />

    <TextView
        android:id="@+id/close"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@drawable/textview_bg"
        android:gravity="center_vertical"
        android:paddingLeft="8dip"
        android:text="@string/close"
        android:textColor="@color/textview_color"
        android:textSize="20sp" />

</LinearLayout>