<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textNoSuggestions"
            android:minWidth="48dip"
            android:text="@string/name" />

        <EditText
            android:id="@+id/filename"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_rename"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:text="@string/rename" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="48dip"
            android:text="@string/path" />

        <EditText
            android:id="@+id/filepath"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entry_in_apk" />

        <EditText
            android:id="@+id/fileentry"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btn_extract"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:text="@string/extract"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>