<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/overview_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/littleblue"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/apk_icon"
            android:layout_width="20.0dip"
            android:layout_height="20.0dip"
            android:layout_gravity="center"
            android:layout_marginLeft="8.0dip"
            android:layout_marginTop="4dip"
            android:layout_marginRight="12.0dip"
            android:layout_marginBottom="4dip"
            android:contentDescription="@android:string/no" />

        <TextView
            android:id="@+id/apk_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="2.0dip"
            android:singleLine="true"
            android:textColor="@color/lightblack"
            android:textSize="16.0sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:background="#ffffffff"
        android:paddingLeft="8dip"
        android:paddingRight="8dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/launcher_icon"
                    android:textColor="@color/lightblue"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/launcher_icon"
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_marginLeft="8.0dip"
                    android:contentDescription="@android:string/no"
                    android:scaleType="fitCenter" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/str_app_name"
                android:textColor="@color/lightblue"
                android:textSize="14sp"></TextView>

            <EditText
                android:id="@+id/et_appname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/package_name"
                android:textColor="@color/lightblue"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_pkgname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/layout_rename_extra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_rename_notice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pkg_rename_notice"
                    android:textColor="@color/lightblue"
                    android:textSize="12sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_rename_method"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dip"
                    android:text="@string/package_rename_method"
                    android:textColor="@color/lightblue"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <Spinner
                    android:id="@+id/rename_method_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:visibility="gone" />

                <CheckBox
                    android:id="@+id/cb_rename_resource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rename_in_resources"
                    android:textColor="@color/lightblue"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/cb_rename_dex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/rename_in_dex"
                    android:textColor="@color/lightblue"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/install_location"
                android:textColor="@color/lightblue"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/location_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/version_code"
                android:textColor="@color/lightblue"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_vercode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_vername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/version_name"
                android:textColor="@color/lightblue"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_vername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_minSdkVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/min_sdk_version"
                android:textColor="@color/lightblue"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_minSdkVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_targetSdkVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/target_sdk_version"
                android:textColor="@color/lightblue"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_targetSdkVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_maxSdkVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/max_sdk_version"
                android:textColor="@color/lightblue"
                android:textSize="14sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_maxSdkVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textSize="14sp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/littleblue">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/close" />
    </LinearLayout>

</LinearLayout>